Added proper memory parameter to generated run.sh script